# kashot

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  LICENSE-APACHE  PLAN.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md
.github/workflows/: build-csharp.yml  build-flatpak-repo.yml  build-rust.yml  build-snap.yml  codeql.yml  mirror-ffmpeg.yml  no-ai-traces.yml  validate-flatpak.yml
Installer/: Kashot.wxs  build.ps1
Kashot/: AboutForm.cs  Annotations.cs  Directory.Build.props  Kashot.csproj  NativeMethods.cs  OcrService.cs  OverlayForm.cs  PinForm.cs  Program.cs  ScreenRecorder.cs  Settings.cs  SettingsForm.cs  StartupHelper.cs  Theme.cs  TrayContext.cs
docs/: 404.html  CNAME  app.js  index.html  install.ps1  install.sh  robots.txt  sitemap.xml  styles.css
icons/: README.txt  manifest.json
kashot-rs/: Cargo.toml
kashot-rs/crates/kashot-app/: Cargo.toml  build.rs
kashot-rs/crates/kashot-app/src/: about_form.rs  bitmap_font.rs  brand_icon.rs  convert_image_form.rs  convert_video_form.rs  editor.rs  icons.rs  main.rs  painter.rs  pin.rs  recording_indicator.rs  self_updater.rs  settings_form.rs  tray_loop.rs  updates_form.rs
kashot-rs/crates/kashot-app/src/editor/: about_dialog.rs  app.rs  canvas.rs  icons.rs  message.rs  mod.rs  overlay.rs  pin_window.rs  render.rs  save.rs  settings_dialog.rs  toolbar.rs
kashot-rs/crates/kashot-core/: Cargo.toml
kashot-rs/crates/kashot-core/src/: annotation.rs  color.rs  lib.rs  settings.rs  state.rs  theme.rs  tool.rs
kashot-rs/crates/kashot-platform/: Cargo.toml
kashot-rs/crates/kashot-platform/src/: capture.rs  clipboard.rs  hotkey.rs  lib.rs  recorder.rs  recorder_macos_audio.rs  recorder_windows_audio.rs  tray.rs
kashot-rs/wix/: License.rtf  main.wxs
snap/: snapcraft.yaml
