[package]
name        = "kashot-app"
version     = { workspace = true }
edition     = { workspace = true }
authors     = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
description = "Kashot — native cross-platform screenshot tool"

[[bin]]
name = "kashot"
path = "src/main.rs"

[dependencies]
kashot-core     = { path = "../kashot-core" }
kashot-platform = { path = "../kashot-platform" }

# Iced / imageproc / tokio land with the full editor port (PLAN.md § R7).
# `rfd` is in early — Settings and About use it for native dialogs today, the
# editor will keep using it for the Save / Open file pickers.
image       = { workspace = true }
chrono      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
directories = { workspace = true }
rfd         = { workspace = true }
softbuffer  = { workspace = true }
tiny-skia   = { workspace = true }
winit       = "0.30"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_Shell",
] }
