[package]
name        = "kashot-app"
version     = { workspace = true }
edition     = { workspace = true }
authors     = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
description = "Kashot — native cross-platform screenshot tool"
# Build-time hook that bundles ffmpeg next to the kashot binary so the
# Convert-video dialog works on machines without a system ffmpeg. Honors
# `KASHOT_FFMPEG=/path/to/ffmpeg` to override the auto-discovered binary
# (set this in CI to a static build for shipping).
build       = "build.rs"

[[bin]]
name = "kashot"
path = "src/main.rs"

# cargo-wix metadata. Drives `cargo wix` to produce Kashot.msi for the
# GitHub Release on tag pushes (see .github/workflows/build-rust.yml).
#
# The WiX source itself lives at the workspace root in `kashot-rs/wix/`
# (one shared dir, not buried inside this crate) so that the WiX file +
# License.rtf + Kashot.ico are easy to find. CI passes `--include` to
# `cargo wix` to point at `wix/main.wxs` explicitly.
#
# `name = "Kashot"` (capitalised) forces cargo-wix to emit `Kashot.msi`
# instead of `kashot-app-<version>-x86_64.msi`, matching the URL pattern
# that dist/winget and dist/chocolatey already hard-code.
[package.metadata.wix]
name      = "Kashot"
no-build  = false
output    = "Kashot.msi"
# Skip cargo-wix's auto-license / auto-EULA — we provide our own
# License.rtf and the WixUI License page wires it up via WixVariable.
license   = false
eula      = false

[dependencies]
kashot-core     = { path = "../kashot-core" }
kashot-platform = { path = "../kashot-platform" }

# Iced / imageproc / tokio land with the full editor port (PLAN.md § R7).
# `rfd` is in early — Settings and About use it for native dialogs today, the
# editor will keep using it for the Save / Open file pickers.
image       = { workspace = true }
arboard     = { workspace = true }
chrono      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
directories = { workspace = true }
rfd         = { workspace = true }
softbuffer  = { workspace = true }
tiny-skia   = { workspace = true }
winit       = "0.30"

# X11 keyboard focus + grab — winit's `focus_window()` sends
# `_NET_ACTIVE_WINDOW` which Cinnamon ignores fast enough that the overlay
# never receives KeyPress events. We force focus via XSetInputFocus +
# XGrabKeyboard right after the window is mapped.
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_Shell",
] }
