[package]
name        = "kashot-platform"
version     = { workspace = true }
edition     = { workspace = true }
authors     = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
description = "Kashot — platform shims (capture, hotkey, tray, clipboard)"

[dependencies]
kashot-core   = { path = "../kashot-core" }
xcap          = { workspace = true }
global-hotkey = { workspace = true }
tray-icon     = { workspace = true }
arboard       = { workspace = true }
image         = { workspace = true }
chrono        = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }

# tray-icon on Linux speaks StatusNotifierItem via libayatana-appindicator,
# which requires GTK to be initialized on the main thread before any menu /
# tray-icon construction, and needs GTK's main context iterated to deliver
# menu-click events. We init it in `Tray::new` and pump it from the winit
# event loop via `Tray::pump_events`.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
