[package]
name        = "kashot-platform"
version     = { workspace = true }
edition     = { workspace = true }
authors     = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
description = "Kashot — platform shims (capture, hotkey, tray, clipboard)"

[dependencies]
kashot-core   = { path = "../kashot-core" }
xcap          = { workspace = true }
global-hotkey = { workspace = true }
tray-icon     = { workspace = true }
arboard       = { workspace = true }
image         = { workspace = true }
chrono        = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }

# tray-icon on Linux speaks StatusNotifierItem via libayatana-appindicator,
# which requires GTK to be initialized on the main thread before any menu /
# tray-icon construction, and needs GTK's main context iterated to deliver
# menu-click events. We init it in `Tray::new` and pump it from the winit
# event loop via `Tray::pump_events`.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

# Windows system-audio capture. WASAPI loopback on the default render endpoint
# pulls what the speakers are playing without any virtual-cable driver, and the
# default capture endpoint gives the mic. Both feed ffmpeg over a loopback TCP
# socket (see recorder_windows_audio.rs). No Media Foundation / COM hand-rolling.
[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.15"

# macOS system-audio capture. ScreenCaptureKit captures the system audio mix
# without a loopback driver (BlackHole / Aggregate); we pull the PCM out of the
# delivered CMSampleBuffers and stream it into ffmpeg over a loopback TCP socket
# (see recorder_macos_audio.rs), exactly like the Windows path.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSError", "NSArray", "NSObjCRuntime"] }
objc2-screen-capture-kit = { version = "0.3", features = ["SCStream", "SCShareableContent", "SCError"] }
objc2-core-media = { version = "0.3", features = ["CMSampleBuffer", "CMBlockBuffer", "CMFormatDescription", "objc2-core-audio-types"] }
objc2-core-audio-types = { version = "0.3", features = ["CoreAudioBaseTypes"] }
objc2-core-foundation = "0.3"
block2 = "0.6"
dispatch2 = "0.3"
